--- a/LSY/lsy-admin/src/main/resources/application.yml
+++ b/LSY/lsy-admin/src/main/resources/application.yml
@@ -30,7 +30,7 @@ server:
       max: 800
       # Tomcat启动初始化的线程数，默认值10
       min-spare: 100
- 
+
 # 日志配置
 logging:
   level:
@@ -134,7 +134,7 @@ xss:
   # 排除链接（多个用逗号分隔）
   excludes: /system/notice/*
   # 匹配链接
-  urlPatterns: /system/*,/monitor/*,/tool/*
+  urlPatterns: /system/*,/monitor/*,/tool/*,/erp/*
 
 # Swagger配置
 swagger:
