--- a/LSY/lsy-system/pom.xml
+++ b/LSY/lsy-system/pom.xml
@@ -22,6 +22,10 @@
             <groupId>lsy</groupId>
             <artifactId>lsy-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
     </dependencies>
 
